examples/errors/argument_argument_collision.aaa
fn
    foo
args
    foo as int
{
    nop
}


fn
    main
{
    nop
}
